examples/datalog/18_advanced_patterns/71_histogram.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_hist
Knowledge graph 'test_hist' created.
Switched to knowledge graph: test_hist
> .kg use test_hist
Switched to knowledge graph: test_hist
> +values[(5,), (15,), (25,), (35,), (45,), (55,), (8,), (22,), (48,)].
Inserted 9 fact(s) into 'values'.
> bucket(V, B) :- values(V), B = (V / 20) * 20.
Script error: Query execution failed: Unsafe rule: Atom { relation: "bucket", args: [Variable("V"), Variable("B")] }. Variables ["B"] in head do not appear in positive body atoms.
