examples/datalog/18_advanced_patterns/71_histogram.dl
% Test: Histogram/bucketing pattern
% Expected: Group values into buckets
% Category: 18_advanced_patterns
% Priority: P2 - Advanced patterns

.kg create test_hist
.kg use test_hist

+values[(5,), (15,), (25,), (35,), (45,), (55,), (8,), (22,), (48,)].

% Bucket by 20s: 0-19, 20-39, 40-59
bucket(V, B) :- values(V), B = (V / 20) * 20.

% Count per bucket
bucket_count(B, <COUNT:V>) :- bucket(V, B).

?- bucket_count(B, N).

.kg use default
.kg drop test_hist
